--- a/tri.html
+++ b/tri.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,19 +7,19 @@
 
 </head>
 <body>
-
+<div id="1page">
 <h1>Le Tri Selectif</h1>
-
+<div id="block1">
 <div id="jaune" class="poubelles1">
 
-    <img src="poubelles/poubelle-jaune.jpg" height="240" width="240"/>
+    <img src="poubelles/poubelle-jaune.jpg" height="60%" width="60%" alt="poubelle jaune"/>
 
-
+</div>
 
 
 <div id="vert" class="poubelles1">
 
-    <img src="verte.jpg" height="280" width="180"/>
+    <img src="verte.jpg" height="60%" width="60%" alt="poubelle verte"/>
 
 
 
@@ -28,21 +28,25 @@
 <!-- <img id="deche"> -->
 <div id="deche"></div>
 
+<div id="block2">
+    <div id="bleu" class="poubelles">
 
-<div id="bleu" class="poubelles">
+    <img src="poubelles/bleu.JPG" height="60%" width="60%" alt="poubelle bleue"/>
 
-    <img src="poubelles/bleu.JPG" height="262" width="220"/>
-
-
+    </div>
 
 <div id="marron" class="poubelles">
 
-    <img src="poubelles/poubellemarron.jpg" height="280" width="220"/>
-
+    <img src="poubelles/poubellemarron.jpg" height="60%" width="40%" alt="poubelle marron"/>
 
 </div>
 </div>
-
+</div>
+<div id="bouto">
+<button id="scor">scores</button>
+</div>
+<div id="nouvelle">
+    <h2>Score et réponses</h2>
 <div id="reponses">
 
 
@@ -53,7 +57,7 @@
 
 
 </div>
-
+</div>
 
 <script src="tri.js"></script>
 </body>
